# Jackson-Blacklock-SDK

./: .gitignore  README.md  design.md  pyproject.toml
examples/: demo.py
lotr_sdk/: __init__.py  client.py  errors.py  filters.py  models.py
lotr_sdk/resources/: __init__.py  base.py  movies.py  quotes.py
tests/: conftest.py  test_client.py  test_movies.py  test_quotes.py
